tests/testcases/errors/BCE0063-1.boo
"""
BCE0063-1.boo(4,1): BCE0063: No enclosing loop out of which to break or continue.
"""
break
